# gcode_geom

./: LICENSE  README.md  pyproject.toml
src/gcode_geom/: __init__.py  ghalfline.py  gpoint.py  gpolyline.py  gsegment.py  utils.py
